fix: change gap in card my destination (style)

--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
@@ -18,7 +18,7 @@ img {
 .card-destination-information {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: .5rem;
 	padding: 0 .875rem;
 	padding-top: 1.0rem;
 	padding-bottom: 1.375rem;
